<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:id="@+id/container"
    tools:context=".MainActivity$PlaceholderFragment">

    <com.etsy.android.grid.StaggeredGridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="60dp"
        android:clipToPadding="false"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:item_margin="8dp"
        app:column_count="2"
        app:grid_paddingLeft="0dp"
        app:grid_paddingRight="0dp"/>

    <!--
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="60dp"
        android:clipToPadding="false"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:dividerHeight="8dp"
        android:divider="@android:color/transparent"
        />-->

    <FrameLayout
        android:id="@+id/blur_image"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"/>

    <recetas.sherpa.studio.com.recetas.widgets.FloatingActinButtons.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        fab:fab_addButtonColorNormal="@color/theme_color"
        fab:fab_addButtonColorPressed="@color/theme_color_dark"
        fab:fab_addButtonPlusIconColor="#FFFFFF"
        fab:fab_labelStyle="@style/menu_labels_style">

        <recetas.sherpa.studio.com.recetas.widgets.FloatingActinButtons.FloatingActionButton
            android:id="@+id/add_manually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_manual_grey"
            fab:fab_title="@string/add_recipe_manual"/>

        <recetas.sherpa.studio.com.recetas.widgets.FloatingActinButtons.FloatingActionButton
            android:id="@+id/add_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_www"
            fab:fab_title="@string/add_recipe_web"/>

        <recetas.sherpa.studio.com.recetas.widgets.FloatingActinButtons.FloatingActionButton
            android:id="@+id/add_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_document"
            fab:fab_title="@string/add_recipe_document"/>

        <recetas.sherpa.studio.com.recetas.widgets.FloatingActinButtons.FloatingActionButton
            android:id="@+id/add_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_camera_grey"
            fab:fab_title="@string/add_recipe_camera"/>

        </recetas.sherpa.studio.com.recetas.widgets.FloatingActinButtons.FloatingActionsMenu>

</RelativeLayout>
